--- a/myprot/scss/__font.scss
+++ b/myprot/scss/__font.scss
@@ -16,3 +16,9 @@
 	font-display: swap;
 	src: local('Pretendard Regular'), url(../fonts/DungGeunMo.woff2) format('woff2'), url(../fonts/DungGeunMo.woff) format('woff');
 }
+@font-face {
+    font-family: "Riasans";
+    src: local('Pretendard Regular'), url(../fonts/RiaSans-ExtraBold.woff2) format('woff2');
+    font-weight: 700;
+    font-style: normal;
+}
