--- a/myprot/scss/main.scss
+++ b/myprot/scss/main.scss
@@ -3,7 +3,10 @@
 @import "./_font";
 @import "./_layout";
 @import "./_var";
-@import "./_sub.page";
+@import "./_aerok";
+@import "./_sejong";
+@import "./_rot";
+
 
 .skip{
     @include skip;
