--- a/myprot/scss/main.scss
+++ b/myprot/scss/main.scss
@@ -6,7 +6,8 @@
 @import "./_aerok";
 @import "./_sejong";
 @import "./_rot";
-
+@import "./_mannger";
+@import "./_count";
 
 .skip{
     @include skip;
