--- a/myprot/css/main.css
+++ b/myprot/css/main.css
@@ -1142,6 +1142,12 @@ header .wrapper .gnb ul li a span:hover {
   object-fit: contain;
 }
 
+@media screen and (max-width: 1260px) {
+  .wrapper {
+    width: auto;
+    margin: 0 20px;
+  }
+}
 .skip {
   overflow: hidden;
   position: absolute;
