--- a/scss/__layout.scss
+++ b/scss/__layout.scss
@@ -1,3 +1,23 @@
+.skipnav {
+    z-index: 1000000;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    a {
+        position: absolute;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+        height: 50px;
+        background-color: $primary-color-50;
+        color: $bg-color;
+        transform: translateY(-100%);
+        &:focus, &:active {transform: translateY(0);}
+    }
+}
+
 header {
     z-index: 9999;
     position: fixed;
@@ -31,6 +51,23 @@ header {
                 display: flex;
                 gap: 2.35em;
                 li {
+                    position: relative;
+                    &.on {
+                        &::before {
+                            content: "";
+                            position: absolute;
+                            right: -0.6em;
+                            top: 1.2em;
+                            width: 0.4em;
+                            height: 0.4em;
+                            background-color: $primary-color-50;
+                            background-position: center center;
+                            background-repeat: no-repeat;
+                            background-size: contain;
+                            border-radius: 50%;
+                            animation:FadeIn 2s ease infinite normal both;
+                        }
+                    }
                     a{
                         display: flex;
                         align-items: center;
