250305-wrapper overflow hidden 주면안됨
wrap에 overflow hidden 들어가있어야함

--- a/css/main.css
+++ b/css/main.css
@@ -22,12 +22,13 @@ body, html {
 .wrapper {
   width: 1260px;
   margin: 0 auto;
-  overflow: hidden;
 }
 
 #wrap {
+  min-width: 1260px;
   width: 100%;
   position: relative;
+  overflow: hidden;
 }
 
 * {
