--- a/scss/__sejong.scss
+++ b/scss/__sejong.scss
@@ -7,12 +7,13 @@
 }
 
 .sejong_visual {
+    position: relative;
     width: 100%;
     background-image: url(../images/sejong/sejong_visual.jpg);
     .wrapper {
         @include flex-col;
         justify-content: center;
-        gap: 2.35em;
+        gap: 1.41em;
         padding-bottom: 20.2em;
         height: 55.70em;
         color: #38278D;
@@ -40,21 +41,6 @@
             gap: 0.94em;
             font-size: $body-L;
             font-weight: 700;
-            .original_site {
-                a {
-                    display: flex;
-                    padding: 0.52em 1.05em;
-                    border: 1px solid $bg-color;
-                    border-radius: 100px;
-                    color: $bg-color;
-                    &:hover {
-                        background-color: $bg-color;
-                        border: 1px solid #38278D;
-                        color: #6857B8;
-                        transition: 0.1s;
-                    }
-                }
-            }
             .renewal_site {
                 a {
                     display: flex;
@@ -68,6 +54,23 @@
                         border: 1px solid #38278D;
                         transition: 0.1s;
                     }
+                }
+            }
+        }
+        .arrow_div {
+            position: absolute;
+            left: calc(50% - 11px);
+            bottom: 4.82em;
+            height: 1.29em;
+            .arrow {
+                position: absolute;
+                opacity: 1;
+                &:first-child {
+                    animation: motion 2s ease-out 0s infinite;
+                }
+                &:last-child {
+                    animation: motion 2s ease-out 1s infinite;
+                    opacity: 0;
                 }
             }
         }
@@ -191,21 +194,6 @@
             font-size: $body-L;
             font-weight: 700;
             color: $bg-color;
-            .original_site {
-                a {
-                    display: flex;
-                    padding: 0.52em 1.05em;
-                    border: 1px solid $bg-color;
-                    color: $bg-color;
-                    border-radius: 100px;
-                    &:hover {
-                        background-color: $bg-color;
-                        border: 1px solid #38278D;
-                        color: #6857B8;
-                        transition: 0.1s;
-                    }
-                }
-            }
             .renewal_site {
                 a {
                     display: flex;
