--- a/Sejong/scss/main.scss
+++ b/Sejong/scss/main.scss
@@ -112,7 +112,7 @@
                     .next {
                         @include icon;
                         background-image: url("data:image/svg+xml,%3Csvg width='24' height='24' viewBox='0 0 24 24' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M11.4031 12.0031L15.3031 15.9031C15.4865 16.0865 15.5781 16.3198 15.5781 16.6031C15.5781 16.8865 15.4865 17.1198 15.3031 17.3031C15.1198 17.4865 14.8865 17.5781 14.6031 17.5781C14.3198 17.5781 14.0865 17.4865 13.9031 17.3031L9.30312 12.7031C9.20312 12.6031 9.13229 12.4948 9.09062 12.3781C9.04896 12.2615 9.02812 12.1365 9.02812 12.0031C9.02812 11.8698 9.04896 11.7448 9.09062 11.6281C9.13229 11.5115 9.20312 11.4031 9.30312 11.3031L13.9031 6.70313C14.0865 6.51979 14.3198 6.42812 14.6031 6.42812C14.8865 6.42812 15.1198 6.51979 15.3031 6.70313C15.4865 6.88646 15.5781 7.11979 15.5781 7.40312C15.5781 7.68646 15.4865 7.91979 15.3031 8.10312L11.4031 12.0031Z' fill='%235F6368'/%3E%3C/svg%3E%0A");
-                        transform: scaleX(-1);
+                        transform: scale(-1);
                     }
                     .stop {
                         @include icon;
@@ -1034,8 +1034,8 @@
     }
 }
 @keyframes WidthCenter {
-    0% {transform:scaleX(0);}
-    100% {transform:scaleX(1);}
+    0% {transform: scale(0);}
+    100% {transform: scale(1);}
 }
 
 @include mobile {
